--- a/documentation/documents/identity/sequential/index.html
+++ b/documentation/documents/identity/sequential/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.4.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.0.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -101,7 +101,7 @@ as in this example:</p>
 <pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    // Overriding the Hilo settings for the document type &quot;IntDoc&quot;&#xD;&#xA;    _.Schema.For&lt;IntDoc&gt;()&#xD;&#xA;        .HiloSettings(new HiloSettings {MaxLo = 66});&#xD;&#xA;&#xD;&#xA;    _.Connection(ConnectionSource.ConnectionString);&#xD;&#xA;});&#xD;&#xA;</code></pre>
 <h2 id="set-the-identifier-floor">Set the Identifier Floor</h2>
 <p>Marten 1.2 adds a convenience method to reset the &quot;floor&quot; of the Hilo sequence for a single document type:</p>
-<pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(ConnectionSource.ConnectionString);&#xD;&#xA;&#xD;&#xA;// Resets the minimum Id number for the IntDoc document&#xD;&#xA;// type to 2500&#xD;&#xA;store.Advanced.ResetHiloSequenceFloor&lt;IntDoc&gt;(2500);&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(ConnectionSource.ConnectionString);&#xD;&#xA;&#xD;&#xA;// Resets the minimum Id number for the IntDoc document&#xD;&#xA;// type to 2500&#xD;&#xA;store.Tenancy.Default.ResetHiloSequenceFloor&lt;IntDoc&gt;(2500);&#xD;&#xA;</code></pre>
 <p>This functionality was added specifically to aid in importing data from an existing data source. Do note that this functionality simply guarantees
 that all new id's assigned for the document type will be higher than the new floor. It is perfectly possible and even likely that there will be some
 gaps in the id sequence.</p>
@@ -134,7 +134,6 @@ gaps in the id sequence.</p>
         <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-        <script type="text/javascript" src="/marten/content/embed.js"></script>
         <script type="text/javascript" src="/marten/content/prism.js"></script>
         <script type="text/javascript" src="/marten/content/sidebar.js"></script>
         <script type="text/javascript" src="/marten/content/affix.js"></script>
