--- a/documentation/documents/json/newtonsoft/index.html
+++ b/documentation/documents/json/newtonsoft/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.4.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.0.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -99,6 +99,10 @@ the automatic dirty checking option.</p>
 <p>To customize the Newtonsoft.Json serialization, you need to explicitly supply an instance of Marten's <code>JsonNetSerializer</code> as shown below:</p>
 <pre><code class="language-csharp">&#xD;&#xA;var serializer = new Marten.Services.JsonNetSerializer();&#xD;&#xA;        &#xD;&#xA;// To change the enum storage policy to store Enum&#x27;s as strings:&#xD;&#xA;serializer.EnumStorage = EnumStorage.AsString;&#xD;&#xA;&#xD;&#xA;// All other customizations:&#xD;&#xA;serializer.Customize(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    // Code directly against a Newtonsoft.Json JsonSerializer&#xD;&#xA;    _.DateTimeZoneHandling = DateTimeZoneHandling.RoundtripKind;&#xD;&#xA;    _.ConstructorHandling = ConstructorHandling.AllowNonPublicDefaultConstructor;&#xD;&#xA;});&#xD;&#xA;&#xD;&#xA;var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.Connection(&quot;some connection string&quot;);&#xD;&#xA;&#xD;&#xA;    // Replace the default JsonNetSerializer with the one we configured&#xD;&#xA;    // above&#xD;&#xA;    _.Serializer(serializer);&#xD;&#xA;});&#xD;&#xA;</code></pre>
 <div class="alert alert-info">
+You should not override the Newtonsoft.Json <code>ContractResolver</code> with <code>CamelCasePropertyNamesContractResolver</code> for Json Serialization. Newtonsoft.Json by default respects the casing used in property / field names which is typically PascalCase.
+This can be overriden to serialize the names to camelCase and Marten will store the JSON in the database as specified by the Newtonsoft.Json settings. However, Marten uses the property / field names casing for its SQL queries and queries are case sensitive and as such, querying will not work correctly. 
+</div>
+<div class="alert alert-info">
 Marten actually has to keep two Newtonsoft.Json serializers, with one being a "clean" Json serializer that omits all Type metadata. The need for two serializers is why
 the customization is done with a nested closure so that the same configuration is always applied to both internal <code>JsonSerializer's</code>.
 </div>
@@ -131,7 +135,6 @@ the customization is done with a nested closure so that the same configuration i
         <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-        <script type="text/javascript" src="/marten/content/embed.js"></script>
         <script type="text/javascript" src="/marten/content/prism.js"></script>
         <script type="text/javascript" src="/marten/content/sidebar.js"></script>
         <script type="text/javascript" src="/marten/content/affix.js"></script>
