--- a/documentation/postgres/case-sensitivity/unique-values/index.html
+++ b/documentation/postgres/case-sensitivity/unique-values/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.4.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.0.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -43,7 +43,7 @@
 		        <li>
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
 		        </li>
-		      	<li><a href="/marten/documentation/postgres/case-sensitivity" title="Case Sensitivity (under construction)">Previous</a></li>
+		      	<li><a href="/marten/documentation/postgres/case-sensitivity" title="Case Sensitivity">Previous</a></li>
 		      	<li><a href="/marten/documentation/postgres/case-sensitivity/case-insensitive-data" title="Case Insensitive Data (under construction)">Next</a></li>
 		      </ul>
       <div class="navbar-form navbar-left" role="search">
@@ -59,7 +59,7 @@
 
 		  <div class="container">
 		  	<nav class="navbar-inverse">
-		  		<ol class="breadcrumb"><li><a href="/marten/">Marten</a></li><li><a href="/marten/documentation">Documentation</a></li><li><a href="/marten/documentation/postgres">Postgres for SQL Server users</a></li><li><a href="/marten/documentation/postgres/case-sensitivity">Case Sensitivity (under construction)</a></li><li class="active">Unique Values (under construction)</li></ol>
+		  		<ol class="breadcrumb"><li><a href="/marten/">Marten</a></li><li><a href="/marten/documentation">Documentation</a></li><li><a href="/marten/documentation/postgres">Postgres for SQL Server users</a></li><li><a href="/marten/documentation/postgres/case-sensitivity">Case Sensitivity</a></li><li class="active">Unique Values (under construction)</li></ol>
 		  	</nav>
 		  </div>
 
@@ -78,7 +78,7 @@
 		        </ul>
 
 		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/postgres/case-sensitivity/case-insensitive-data">Case Insensitive Data (under construction)</a></p>
-		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation/postgres/case-sensitivity">Case Sensitivity (under construction)</a></p>
+		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation/postgres/case-sensitivity">Case Sensitivity</a></p>
 
 		        </ul>
 		      </div><!--/left-->
@@ -100,7 +100,7 @@
 
 			      	<nav>
 				        <span>
-				        	<strong>Previous: </strong><a href="/marten/documentation/postgres/case-sensitivity">Case Sensitivity (under construction)</a>
+				        	<strong>Previous: </strong><a href="/marten/documentation/postgres/case-sensitivity">Case Sensitivity</a>
 
 				        </span>
 				        <span class="pull-right">
@@ -122,7 +122,6 @@
         <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-        <script type="text/javascript" src="/marten/content/embed.js"></script>
         <script type="text/javascript" src="/marten/content/prism.js"></script>
         <script type="text/javascript" src="/marten/content/sidebar.js"></script>
         <script type="text/javascript" src="/marten/content/affix.js"></script>
