--- a/documentation/documents/advanced/patch_api/index.html
+++ b/documentation/documents/advanced/patch_api/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.4.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.0.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -130,17 +130,19 @@ shown below:</p>
 <h2 id="incrementing-an-existing-value">Incrementing an Existing Value</h2>
 <p>To increment a persisted value in the persisted document, use this operation:</p>
 <pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void increment_for_int()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random();&#xD;&#xA;    target.Number = 6;&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Increment(x =&gt; x.Number);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        query.Load&lt;Target&gt;(target.Id).Number.ShouldBe(7);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
-<p>By default, the <code>Increment()</code> operation will add 1 to the existing value. You can optionally override the increment:</p>
+<p>By default, the <code>Patch.Increment()</code> operation will add 1 to the existing value. You can optionally override the increment:</p>
 <pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void increment_for_int_with_explicit_increment()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random();&#xD;&#xA;    target.Number = 6;&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Increment(x =&gt; x.Number, 3);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        query.Load&lt;Target&gt;(target.Id).Number.ShouldBe(9);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
 <h2 id="append-an-element-to-a-child-collection">Append an Element to a Child Collection</h2>
 <p>The <code>Patch.Append()</code> operation adds a new item to the end of a child collection:</p>
-<pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void append_complex_element()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random(true);&#xD;&#xA;    var initialCount = target.Children.Length;&#xD;&#xA;&#xD;&#xA;    var child = Target.Random();&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Append(x =&gt; x.Children, child);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        var target2 = query.Load&lt;Target&gt;(target.Id);&#xD;&#xA;        target2.Children.Length.ShouldBe(initialCount &#x2B; 1);&#xD;&#xA;&#xD;&#xA;        target2.Children.Last().Id.ShouldBe(child.Id);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;    [Fact]&#xD;&#xA;public void append_complex_element()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random(true);&#xD;&#xA;    var initialCount = target.Children.Length;&#xD;&#xA;&#xD;&#xA;    var child = Target.Random();&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Append(x =&gt; x.Children, child);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        var target2 = query.Load&lt;Target&gt;(target.Id);&#xD;&#xA;        target2.Children.Length.ShouldBe(initialCount &#x2B; 1);&#xD;&#xA;&#xD;&#xA;        target2.Children.Last().Id.ShouldBe(child.Id);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<p>The <code>Patch.AppendIfNotExists()</code> operation will treat the child collection as a set rather than a list and only append the element if it does not already exist within the collection</p>
 <p>Marten can append either complex, value object values or primitives like numbers or strings.</p>
 <h2 id="insert-an-element-into-a-child-collection">Insert an Element into a Child Collection</h2>
-<p>Instead of adding an item to the end of a child collection, the <code>Insert()</code> operation allows you
-to put a new item into a persisted collection with a given index -- with the default index
+<p>Instead of appending an item to the end of a child collection, the <code>Patch.Insert()</code> operation allows you
+to insert a new item into a persisted collection with a given index -- with the default index
 being 0 so that a new item would be inserted at the beginning of the child collection.</p>
-<pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void insert_first_complex_element()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random(true);&#xD;&#xA;    var initialCount = target.Children.Length;&#xD;&#xA;&#xD;&#xA;    var child = Target.Random();&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Insert(x =&gt; x.Children, child);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        var target2 = query.Load&lt;Target&gt;(target.Id);&#xD;&#xA;        target2.Children.Length.ShouldBe(initialCount &#x2B; 1);&#xD;&#xA;&#xD;&#xA;        target2.Children.First().Id.ShouldBe(child.Id);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;    [Fact]&#xD;&#xA;public void insert_first_complex_element()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random(true);&#xD;&#xA;    var initialCount = target.Children.Length;&#xD;&#xA;&#xD;&#xA;    var child = Target.Random();&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Insert(x =&gt; x.Children, child);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        var target2 = query.Load&lt;Target&gt;(target.Id);&#xD;&#xA;        target2.Children.Length.ShouldBe(initialCount &#x2B; 1);&#xD;&#xA;&#xD;&#xA;        target2.Children.First().Id.ShouldBe(child.Id);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<p>The <code>Patch.InsertIfNotExists()</code> operation will only insert the element if the element at the designated index does not already exist.</p>
 <h2 id="remove-an-element-from-a-child-collection">Remove an Element from a Child Collection</h2>
 <p>The <code>Patch.Remove()</code> operation removes the given item from a child collection:</p>
 <pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void remove_primitive_element()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random();&#xD;&#xA;    var initialCount = target.NumberArray.Length;&#xD;&#xA;&#xD;&#xA;    var random = new Random();&#xD;&#xA;    var child = target.NumberArray[random.Next(0, initialCount)];&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Remove(x =&gt; x.NumberArray, child);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        var target2 = query.Load&lt;Target&gt;(target.Id);&#xD;&#xA;        target2.NumberArray.Length.ShouldBe(initialCount - 1);&#xD;&#xA;&#xD;&#xA;        target2.NumberArray.ShouldHaveTheSameElementsAs(target.NumberArray.ExceptFirst(child));&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;&#xD;&#xA;</code></pre>
@@ -164,7 +166,7 @@ to load, deserialize, edit and save all affected documents</p>
 <p>A current property may be erased simply with a lambda:</p>
 <pre><code class="language-csharp">&#xD;&#xA;theSession.Patch&lt;Target&gt;(target.Id).Delete(t =&gt; t.Inner);&#xD;&#xA;</code></pre>
 <p>Many documents may be patched using a where expressions:</p>
-<pre><code class="language-csharp">&#xD;&#xA;const string where = &quot;where (data -&gt;&gt; &#x27;String&#x27;) is not null&quot;;&#xD;&#xA;theSession.Query&lt;Target&gt;(where).Count.ShouldBe(15);&#xD;&#xA;theSession.Patch&lt;Target&gt;(new WhereFragment(where)).Delete(&quot;String&quot;);&#xD;&#xA;theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;using (var query = theStore.QuerySession())&#xD;&#xA;{&#xD;&#xA;    query.Query&lt;Target&gt;(where).Count(t =&gt; t.String != null).ShouldBe(0);&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;const string where = &quot;(data -&gt;&gt; &#x27;String&#x27;) is not null&quot;;&#xD;&#xA;theSession.Query&lt;Target&gt;(where).Count.ShouldBe(15);&#xD;&#xA;theSession.Patch&lt;Target&gt;(new WhereFragment(where)).Delete(&quot;String&quot;);&#xD;&#xA;theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;using (var query = theStore.QuerySession())&#xD;&#xA;{&#xD;&#xA;    query.Query&lt;Target&gt;(where).Count(t =&gt; t.String != null).ShouldBe(0);&#xD;&#xA;}&#xD;&#xA;</code></pre>
 
 			      	</div>
 
@@ -194,7 +196,6 @@ to load, deserialize, edit and save all affected documents</p>
         <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-        <script type="text/javascript" src="/marten/content/embed.js"></script>
         <script type="text/javascript" src="/marten/content/prism.js"></script>
         <script type="text/javascript" src="/marten/content/sidebar.js"></script>
         <script type="text/javascript" src="/marten/content/affix.js"></script>
