--- a/documentation/documents/querying/paging/index.html
+++ b/documentation/documents/querying/paging/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.4.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.0.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -44,7 +44,7 @@
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
 		        </li>
 		      	<li><a href="/marten/documentation/documents/querying/metadata_queries" title="Metadata Queries">Previous</a></li>
-		      	<li><a href="/marten/documentation/documents/customizing" title="Customizing Document Storage">Next</a></li>
+		      	<li><a href="/marten/documentation/documents/tenancy" title="Tenancy">Next</a></li>
 		      </ul>
       <div class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -77,7 +77,7 @@
 
 		        </ul>
 
-		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/customizing">Customizing Document Storage</a></p>
+		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/tenancy">Tenancy</a></p>
 		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation/documents/querying/metadata_queries">Metadata Queries</a></p>
 
 		        </ul>
@@ -113,7 +113,7 @@ support using <code>Stats()</code> within the compiled query.</p>
 				        </span>
 				        <span class="pull-right">
 
-				        	<strong>Next: </strong><a href="/marten/documentation/documents/customizing">Customizing Document Storage</a>
+				        	<strong>Next: </strong><a href="/marten/documentation/documents/tenancy">Tenancy</a>
 
 				        </span>
 			      	</nav>
@@ -130,7 +130,6 @@ support using <code>Stats()</code> within the compiled query.</p>
         <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-        <script type="text/javascript" src="/marten/content/embed.js"></script>
         <script type="text/javascript" src="/marten/content/prism.js"></script>
         <script type="text/javascript" src="/marten/content/sidebar.js"></script>
         <script type="text/javascript" src="/marten/content/affix.js"></script>
