--- a/documentation/schema/schema/index.html
+++ b/documentation/schema/schema/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.4.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.0.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -93,7 +93,7 @@
 			      		<!--Title:Configuring the Database Schema-->
 <p>By default, Marten will put all database schema objects into the main <em>public</em> schema. If you want to override this behavior,
 use the <code>StoreOptions.DocumentSchemaName</code> property when configuring your <code>IDocumentStore</code>:</p>
-<pre><code class="language-csharp">&#xD;&#xA;StoreOptions(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.MappingFor(typeof(User)).DatabaseSchemaName = &quot;other&quot;;&#xD;&#xA;    _.MappingFor(typeof(Issue)).DatabaseSchemaName = &quot;overriden&quot;;&#xD;&#xA;    _.MappingFor(typeof(Company));&#xD;&#xA;&#xD;&#xA;    // this will tell marten to use the default &#x27;public&#x27; schema name.&#xD;&#xA;    _.DatabaseSchemaName = Marten.StoreOptions.DefaultDatabaseSchemaName;&#xD;&#xA;});&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;StoreOptions(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.Storage.MappingFor(typeof(User)).DatabaseSchemaName = &quot;other&quot;;&#xD;&#xA;    _.Storage.MappingFor(typeof(Issue)).DatabaseSchemaName = &quot;overriden&quot;;&#xD;&#xA;    _.Storage.MappingFor(typeof(Company));&#xD;&#xA;    _.Storage.MappingFor(typeof(IntDoc));&#xD;&#xA;&#xD;&#xA;    // this will tell marten to use the default &#x27;public&#x27; schema name.&#xD;&#xA;    _.DatabaseSchemaName = Marten.StoreOptions.DefaultDatabaseSchemaName;&#xD;&#xA;});&#xD;&#xA;</code></pre>
 <p>As you can see, you can also choose to configure the schema storage for each document type individually.</p>
 
 			      	</div>
@@ -124,7 +124,6 @@ use the <code>StoreOptions.DocumentSchemaName</code> property when configuring y
         <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-        <script type="text/javascript" src="/marten/content/embed.js"></script>
         <script type="text/javascript" src="/marten/content/prism.js"></script>
         <script type="text/javascript" src="/marten/content/sidebar.js"></script>
         <script type="text/javascript" src="/marten/content/affix.js"></script>
